build.log
[ 25%] Building C object CMakeFiles/fkvs.dir/server.c.o
In file included from /Users/alexandre.juca/opensource/C/fkvs/server.c:5:
In file included from /Users/alexandre.juca/opensource/C/fkvs/network.c:2:
/Users/alexandre.juca/opensource/C/fkvs/server.h:4:16: error: redefinition of 'server_t'
    4 | typedef struct server_t {
      |                ^
/Users/alexandre.juca/opensource/C/fkvs/config.h:4:10: note: '/Users/alexandre.juca/opensource/C/fkvs/server.h' included multiple times, additional include site here
    4 | #include "server.h"
      |          ^
/Users/alexandre.juca/opensource/C/fkvs/network.c:2:10: note: '/Users/alexandre.juca/opensource/C/fkvs/server.h' included multiple times, additional include site here
    2 | #include "server.h"
      |          ^
/Users/alexandre.juca/opensource/C/fkvs/server.h:4:16: note: unguarded header; consider using #ifdef guards or #pragma once
    4 | typedef struct server_t {
      |                ^
In file included from /Users/alexandre.juca/opensource/C/fkvs/server.c:5:
In file included from /Users/alexandre.juca/opensource/C/fkvs/network.c:2:
/Users/alexandre.juca/opensource/C/fkvs/server.h:11:3: error: typedef redefinition with different types ('struct (unnamed struct at /Users/alexandre.juca/opensource/C/fkvs/server.h:4:16)' vs 'struct server_t')
   11 | } server_t;
      |   ^
/Users/alexandre.juca/opensource/C/fkvs/config.h:4:10: note: '/Users/alexandre.juca/opensource/C/fkvs/server.h' included multiple times, additional include site here
    4 | #include "server.h"
      |          ^
/Users/alexandre.juca/opensource/C/fkvs/network.c:2:10: note: '/Users/alexandre.juca/opensource/C/fkvs/server.h' included multiple times, additional include site here
    2 | #include "server.h"
      |          ^
/Users/alexandre.juca/opensource/C/fkvs/server.h:11:3: note: unguarded header; consider using #ifdef guards or #pragma once
   11 | } server_t;
      |   ^
2 errors generated.
make[2]: *** [CMakeFiles/fkvs.dir/server.c.o] Error 1
make[1]: *** [CMakeFiles/fkvs.dir/all] Error 2
make: *** [all] Error 2
